Add SLaunch to toolchest

--- a/usr/people/home/.auxchestrc
+++ b/usr/people/home/.auxchestrc
@@ -51,3 +51,9 @@ Menu ToolChest
         no-label	f.separator
 	"Neko Neko"	f.menu NekoNeko
 }
+
+Menu Utilities
+{
+	no-label		f.separator
+	"Command Launch"	f.checkexec.sh.le "/usr/sbin/slaunch"
+}
